--- a/members/index.html
+++ b/members/index.html
@@ -32,12 +32,12 @@
   <link rel="apple-touch-icon" href="/assets/img/logo.webp">
 
   <!-- Preload Critical Assets -->
-  <link rel="preload" href="/assets/css/xyz.css" as="style">
+  <link rel="preload" href="/assets/css/members.css" as="style">
   <link rel="preload" href="/assets/img/community-banner.webp" as="image">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/assets/css/header.css">
-  <link rel="stylesheet" href="member.css">
+  <link rel="stylesheet" href="members.css">
   <link rel="stylesheet" href="/assets/css/footer.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
@@ -525,7 +525,7 @@
 
   <!-- Scripts -->
   <script type="module" src="/assets/js/header.js"></script>
-  <script type="module" src="member.js"></script>
+  <script type="module" src="members.js"></script>
   <script type="module" src="/assets/js/footer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script type="module" src="/assets/js/main.js"></script>
