--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon" href="/assets/img/logo.webp">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="404.css">
+  <link rel="stylesheet" href="404/404.css">
   <link rel="stylesheet" href="/assets/css/header.css">
   <link rel="stylesheet" href="/assets/css/footer.css">
 
@@ -312,7 +312,7 @@
   <div data-include="footer"></div>
 
   <!-- Scripts -->
-  <script type="module" src="404.js"></script>
+  <script type="module" src="404/404.js"></script>
   <script type="module" src="/assets/js/header.js"></script>
   <script type="module" src="/assets/js/footer.js"></script>
   <script type="module" src="/assets/js/main.js"></script>
