--- a/404.html
+++ b/404.html
@@ -467,7 +467,7 @@
       </div>
       
       <!-- Search Box -->
-      <div class="error-search">
+      <!-- <div class="error-search">
         <form id="searchForm" class="search-form" role="search">
           <div class="search-input-wrapper">
             <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -489,7 +489,7 @@
             </button>
           </div>
         </form>
-      </div>
+      </div> -->
       
       <!-- Quick Links -->
       <div class="quick-links">
